# NXL_Robocup

./: .gitignore  README.md  gopro  piper.txt  token
src/nixito_bringup/: package.xml  setup.cfg  setup.py
src/nixito_bringup/nixito_bringup/: gui_demo.launch.py  nixito.launch.py  nixito_piper.launch.py  nixito_piper_real_moveit.launch.py  nixito_piper_rviz.launch.py  orion.launch.py  test.launch.py  vision.launch.py  vision_op.py
src/nixito_bringup/nixito_bringup/config/: arm_parameters.yaml
src/nixito_description/: package.xml  setup.cfg  setup.py
src/nixito_description/meshes/: E1_link.STL  E2_link.STL  E3_link.STL  Hombro_link.STL  dir_L_link.STL  dir_R_link.STL  flipper_L_link.STL  flipper_R_link.STL  gripper_link.STL
src/nixito_description/rviz/: nixito_piper.rviz  nixito_piper_moveit.rviz
src/nixito_description/urdf/: NIXITO 2026 Corea.SLDASM.csv  NIXITO 2026 Corea.SLDASM.urdf  NIXITO 2026 Robocup.SLDASM.csv  NIXITO 2026 Robocup.SLDASM.urdf  NIXITO 2026.SLDASM.csv  NIXITO 2026.SLDASM.urdf  nixito.SLDASM.urdf  orion_arm.SLDASM.urdf
src/nixito_drivers/: package.xml  setup.cfg  setup.py
src/nixito_drivers/nixito_drivers/: serial_data.py
src/nixito_gui/: package.xml  setup.cfg  setup.py
src/nixito_gui/nixito_gui/: gui_arm.py  gui_demo.py
src/nixito_msgs/: CMakeLists.txt  package.xml
src/nixito_msgs/msg/: Detection.msg
src/nixito_navegation/: package.xml  setup.cfg  setup.py
src/nixito_perception/: package.xml  setup.cfg  setup.py
src/nixito_perception/drivers/: ts.txt
src/nixito_perception/drivers/gopro_as_webcam_on_linux/: start_gopro.sh
src/nixito_perception/nixito_perception/: borrar2.py  centro_paro.py  gopro.py  interfaz.py  thermal_cam.py  thermal_topdon.py  vision.py  vision_maze.py
src/orion_arm/: package.xml  setup.cfg  setup.py
src/orion_arm/config/: arm_presets.yaml  joint_limits.yaml
src/orion_arm/orion_arm/: bridge_esp32.py  orion_driver.py  orion_ik_node.py  orion_kinematics.py  raw_cmd_gui.py  real_state_publisher.py  teleop_arm.py
src/piper/piper/: piper_ctrl_single_node.py
src/piper_description/urdf/: piper_description.urdf
src/piper_hardware_bridge/: package.xml  setup.cfg  setup.py
src/piper_hardware_bridge/launch/: piper_real_bringup.launch.py  piper_real_moveit.launch.py  piper_real_velocity_teleop.launch.py
src/piper_hardware_bridge/piper_hardware_bridge/: follow_joint_trajectory_bridge.py  hardware_velocity_bridge.py  joint_state_normalizer.py  joint_state_reader.py
src/piper_moveit/piper_no_gripper_moveit/launch/: move_group.launch.py
src/piper_moveit/piper_with_gripper_moveit/: CMakeLists.txt  package.xml
src/piper_moveit/piper_with_gripper_moveit/config/: joint_limits.yaml  moveit_servo.yaml  named_targets.yaml  piper.srdf
src/piper_moveit/piper_with_gripper_moveit/launch/: piper_cartesian_teleop.launch.py  piper_named_targets.launch.py  piper_servo.launch.py
src/piper_moveit/piper_with_gripper_moveit/scripts/: piper_named_target_executor.py  piper_velocity_gui.py  piper_velocity_teleop.py
src/piper_perception/: package.xml  setup.cfg  setup.py
src/piper_perception/config/: detector.yaml
src/piper_perception/launch/: detector.launch.py
src/piper_perception/piper_perception/: button_detector.py  button_detector_node.py
src/piper_x_description/: package.xml
src/piper_x_description/urdf/: piper_x_description.xacro  piper_x_description_gazebo.xacro
src/piper_x_gazebo/: CMakeLists.txt  package.xml
src/piper_x_gazebo/config/: piper_x.ros2_control.xacro  piper_x_gazebo.urdf.xacro  ros2_controllers.yaml
src/piper_x_gazebo/launch/: piper_x_gazebo.launch.py
src/piper_x_gazebo/worlds/: piper_l_with_estop.world
src/piper_x_tasking/: CMakeLists.txt  package.xml
src/piper_x_tasking/config/: press_estop.yaml
src/piper_x_tasking/launch/: press_estop.launch.py
src/piper_x_tasking/src/: press_estop_node.cpp
src/piper_x_with_gripper_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/piper_x_with_gripper_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  piper_x.ros2_control.xacro  piper_x.srdf  piper_x.urdf.xacro  ros2_controllers.yaml
src/piper_x_with_gripper_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  piper_moveit.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/rviz_control_panel/: CMakeLists.txt  package.xml  plugin_description.xml
src/rviz_control_panel/include/rviz_control_panel/: control_panel.hpp
src/rviz_control_panel/include/rviz_control_panel/include/rviz_control_panel/: control_panel.hpp
src/rviz_control_panel/src/: control_panel.cpp
