<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nixito_bringup</name>
  <version>0.0.0</version>
  <description>Launch files y configuración de inicio para el robot Orion</description>
  <maintainer email="axelguevara7905@gmail.com">axelcg_7905</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend>
  <depend>orion_arm</depend>
  <depend>orion_gui</depend>
  <depend>nixito_description</depend>
  <depend>piper_hardware_bridge</depend>
  <depend>piper_description</depend>
  <depend>piper_with_gripper_moveit</depend>
  <depend>xacro</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
