<?xml version="1.0"?>
<package format="3">
  <name>rviz_control_panel</name>
  <version>0.0.1</version>
  <description>Panel personalizado para RViz2</description>
  <maintainer email="tu_correo@example.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>pluginlib</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>